@@ -1,5 +1,6 @@
 Version 2.02.89 - 
 ==================================
+  Improve lv_extend stack reporting.
   Increase virtual segment size instead of creating multiple segment list.
   Add last_seg(lv) internal function.
   Support empty string for log/prefix.
